--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "engines": {
         "vscode": "^1.61.0"
     },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/ultamatum/colourdark"
+    },
     "categories": [
         "Themes"
     ],
